2003-01-30  Ken Raeburn  <raeburn@mit.edu>

	* login.c (try_krb4): Delete unused krb5 principal name argument.
	(main): Don't pass it.  Initialize 'hostname'.

2003-01-09  Ken Raeburn  <raeburn@mit.edu>

	* krlogind.c (main, recvauth): Use socklen_t when passing
	addresses to socket functions.

2003-01-05  Sam Hartman  <hartmans@mit.edu>

	* login.c: Remove declaration of errno

2003-01-03  Ezra Peisach  <epeisach@bu.edu>

	* compat_recv.c (accept_a_connection): Test if IPv6 socket returns
	EAFNOSUPPORT as well as EPROTONOSUPPORT. Irix 6.5.16m returns the
	former.

2003-01-01  Ken Raeburn  <raeburn@mit.edu>

	* compat_recv.c: Include sys/select.h and port-sockets.h.
	(krb5_compat_recvauth_version): Only attempt krb4 authentication
	if the source address is an IPv4 one.
	(accept_a_connection): New function, derived from old krshd.c.
	Listen on IPv6 as well as IPv4, if possible.
	* krshd.c (main): Call accept_a_connection.  Change fromlen to a
	socklen_t.
	(doit): Initialize s.  Change length passed to getsockname to a
	socklen_t.
	(recvauth): Change len to socklen_t.  Cast peer IPv4 address
	before calling krb5_compat_recvauth_version.
	* defines.h: Include port-sockets.h.
	(accept_a_connection): Declare.

2002-12-06  Ezra Peisach  <epeisach@bu.edu>

	* configure.in: Quote the argument to AC_CHECK_HEADER. Autoconf
	2.57 was having problems.

2002-11-05  Tom Yu  <tlyu@mit.edu>

	* login.c (k5_get_password): Remove trailing colon, as new
	implementation of krb5_read_password() appends it.

2002-09-14  Ken Raeburn  <raeburn@mit.edu>

	* Makefile.in (rcp): Fix typo in 06-25 change.

2002-08-29  Ken Raeburn  <raeburn@mit.edu>

	* Makefile.in: Revert $(S)=>/ change, for Windows support.

2002-08-23  Ken Raeburn  <raeburn@mit.edu>

	* Makefile.in: Change $(S)=>/ and $(U)=>.. globally.

2002-08-23  Ezra Peisach  <epeisach@bu.edu>

	* compat_recv.c: Include defines.h for prototypes.

2002-08-07  Jen Selby  <jenselby@mit.edu>
	