@@ -1251,10 +1251,15 @@ int secondary;
 #endif
 #define min(a,b) ((a < b) ? a : b)
 
-	if (len < 8 && right_justify) {
-		krb5_random_confounder(8 - len, garbage_buf);
-		/* this "right-justifies" the data in the buffer */
-		(void) memcpy(garbage_buf + 8 - len, buf, len);
+	if (len < 8) {
+		if (right_justify) {
+			krb5_random_confounder(8 - len, garbage_buf);
+			/* this "right-justifies" the data in the buffer */
+			(void) memcpy(garbage_buf + 8 - len, buf, len);
+		} else {
+			krb5_random_confounder(8 - len, garbage_buf + len);
+			(void) memcpy(garbage_buf, buf, len);
+		}
 	}
 	(void) pcbc_encrypt((des_cblock *) ((len < 8) ? garbage_buf : buf),
 			    (des_cblock *) (des_outpkt+4),
