@@ -1,3 +1,8 @@
+2003-01-31  Tom Yu  <tlyu@mit.edu>
+
+	* kcmd.c (v4_des_write): Apply patch from ghudson to fix
+	non-right-justification case.
+
 2003-01-30  Ken Raeburn  <raeburn@mit.edu>
 
 	* login.c (try_krb4): Delete unused krb5 principal name argument.
